--- a/portfolio/Crystal/app/scss/main.scss
+++ b/portfolio/Crystal/app/scss/main.scss
@@ -1,6 +1,100 @@
 .main-page {
     position: relative;
     z-index: 1;
+    padding-bottom: 100px;
+}
+
+.title_section {
+    display: flex;
+    justify-content: center;
+    .title {
+        font: 4.5em "SupermolotThin";
+        text-transform: uppercase;
+        letter-spacing: 0.6em;
+        padding-left: 0.6em;
+        position: relative;
+        color: #e60075;
+        margin-bottom: 0.65em;
+        span {
+            color: #949494;
+            position: relative;
+            &:after {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                width: 20px;
+                height: 20px;
+                background: url(../img/icons/title_copy.png) no-repeat;
+                background-size: contain;
+            }
+        }
+        &:before,
+        &:after {
+            content: '';
+            display: block;
+            height: 3px;
+            width: 110px;
+            position: absolute;
+            top: 50%;
+            margin-top: -1px;
+        }
+        &:before {
+            background-color: #a2a2a2;
+            left: 0;
+            transform: translateX(-100%);
+        }
+        &:after {
+            background-color: #e60075;
+            right: 0;
+            transform: translateX(100%);
+        }
+    }
+}
+.title_desription {
+    p {
+        text-align: center;
+        color: #939598;
+        font: 1.5em "SupermolotLight";
+        line-height: 130%;
+        margin-bottom: 0.15em;
+        span {
+            position: relative;
+            font-family: "SupermolotRegular";
+            padding-right: 1em;
+            &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                right: 0;
+                top: 0;
+                width: 11px;
+                height: 11px;
+                background: url(../img/icons/title_copy.png) no-repeat;
+                background-size: contain;
+            }
+        }
+    }
+    .post_txt {
+        color: #f11f83;
+        display: block;
+        font-size: 1.5em;
+        text-align: center;
+        letter-spacing: 0.05em;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        &:after {
+            content: '';
+            height: 25px;
+            width: 25px;
+            display: block;
+            background: url(../img/icons/map_item.png) no-repeat;
+            background-size: contain;
+            margin-top: 6px;
+        }
+    }
 }
 
 .slick-dots {
@@ -136,80 +230,350 @@
 }
 
 .links_block {
-	 padding: 50px 0;
-	 position: relative;
-	 &:after {
-	 	  content: '';
-	 	  width: 100%;
-	 	  display: block;
-	 	  height: 2px;
-	 	  background-color: #e5e5e5;
-	 	  position: absolute;
-	 	  z-index: 2;
-	 	  bottom: 0px;
-	 	  left: 0;
-	 }
-	 ul {
-	 	  display: flex;
-	 	  justify-content: center;
-	 }
-	 li {
-	 	  width: 100px;
-	 	  margin: 0 20px;
-	 }
-	 a {
-	 	  font: 2em "CranberryCyr";
-	 	  text-transform: uppercase;
-	 	  color: #000;
-	 	  white-space: nowrap;
-	 	  display: block;
-	 	  text-align: center;
-	 	  text-decoration: none;
-	 	  opacity: 0.9;
-	 	  &:before {
-	 	  	 content: '';
-	 	  	 display: block;
-	 	  	 margin: 0 auto;
-	 	  	 width: 40px;
-	 	  	 height: 40px;
-	 	  	 margin-bottom: 4px;
-	 	  	 display: block;
-	 	  }
-	 }
-	 .link1 {
-	 	   &:before {
-	 	  	 background: url(../img/icons/link1.png);
-	 	  	 background-size: contain;
-	 	  }
-	 }
-	 .link2 {
-	 	   &:before {
-	 	  	 background: url(../img/icons/link2.png);
-	 	  	 background-size: contain;
-	 	  }
-	 }
-	 .link3 {
-	 	   &:before {
-	 	  	 background: url(../img/icons/link3.png);
-	 	  	 background-size: contain;
-	 	  }
-	 }
-	 .link4 {
-	 	   &:before {
-	 	  	 background: url(../img/icons/link4.png);
-	 	  	 background-size: contain;
-	 	  }
-	 }
-	 .link5 {
-	 	   &:before {
-	 	  	 background: url(../img/icons/link5.png);
-	 	  	 background-size: contain;
-	 	  }
-	 }
+    padding-top: 60px;
+    padding-bottom: 50px;
+    ul {
+        display: flex;
+        justify-content: center;
+    }
+    li {
+        width: 100px;
+        margin: 0 10px;
+    }
+    a {
+        font: 2em "CranberryCyr";
+        text-transform: uppercase;
+        color: #000;
+        white-space: nowrap;
+        display: block;
+        text-align: center;
+        text-decoration: none;
+        opacity: 0.9;
+        &:before {
+            content: '';
+            display: block;
+            margin: 0 auto;
+            width: 40px;
+            height: 40px;
+            margin-bottom: 4px;
+            display: block;
+        }
+    }
+    .link1 {
+        &:before {
+            background: url(../img/icons/link1.png);
+            background-size: contain;
+        }
+    }
+    .link2 {
+        &:before {
+            background: url(../img/icons/link2.png);
+            background-size: contain;
+        }
+    }
+    .link3 {
+        &:before {
+            background: url(../img/icons/link3.png);
+            background-size: contain;
+        }
+    }
+    .link4 {
+        &:before {
+            background: url(../img/icons/link4.png);
+            background-size: contain;
+        }
+    }
+    .link5 {
+        &:before {
+            background: url(../img/icons/link5.png);
+            background-size: contain;
+        }
+    }
+}
+
+.map {
+    .more_crystal {
+        display: flex;
+        justify-content: center;
+        margin: 35px 0;
+        a {
+            font: 1.8em "SupermolotLight";
+            letter-spacing: 0.2em;
+            text-decoration: none;
+            color: #959595;
+            position: relative;
+            text-transform: uppercase;
+            border-bottom: 1px solid #959595;
+            &:after {
+                content: '';
+                height: 24px;
+                position: absolute;
+                right: -3px;
+                top: 0;
+                transform: translateX(100%);
+                width: 24px;
+                display: block;
+                background: url(../img/icons/title_copy.png) no-repeat;
+                background-size: contain;
+            }
+        }
+    }
+    .map_container {
+        margin: 10px 0;
+        padding: 0 130px;
+        position: relative;
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            height: 430px;
+            width: 300px;
+            right: 0;
+            top: 50%;
+            transform: translate(100%, -50%);
+            background: url(../img/bg_item1.png) no-repeat;
+            background-size: contain;
+        }
+        .map {
+            height: 380px;
+            position: relative;
+            &:before,
+            &:after {
+                content: '';
+                display: block;
+                height: 75px;
+                width: 75px;
+                position: absolute;
+                background-color: #ff0089;
+            }
+            &:before {
+                left: -2px;
+                bottom: -2px;
+            }
+            &:after {
+                right: -3px;
+                top: -3px;
+            }
+        }
+        .decoration {
+            display: block;
+            width: 392px;
+            height: 285px;
+            position: absolute;
+            transform: translateX(-100%);
+            left: 77px;
+            top: 15%;
+            z-index: 3;
+            background: url(../img/map_decoration.png) no-repeat;
+            background-size: contain;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            z-index: 2;
+            border: 1px solid #959595;
+        }
+    }
+}
+
+.letter_item {
+    margin: 35px 0;
+    display: flex;
+    justify-content: center;
+    &:before {
+        content: '';
+        background: url(../img/bg_item1.png) no-repeat;
+        background-size: contain;
+        height: 70px;
+        width: 50px;
+    }
+}
+
+.crystal_labs {
+    position: relative;
+    padding-bottom: 25px;
+    .decoration_item {
+        display: block;
+        position: absolute;
+        z-index: 1;
+        top: 270px;
+        width: 100%;
+        height: 2px;
+        background-color: #e5e5e5;
+        &:before {
+            content: '';
+            display: block;
+            height: 700px;
+            width: 377px;
+            position: absolute;
+            left: 0;
+            bottom: -165px;
+            background: url(../img/lab_decoration.png) no-repeat;
+            background-size: contain;
+        }
+    }
+    .container {
+        position: relative;
+        z-index: 2;
+    }
+    .arrow_right,
+    .arrow_left {
+        display: block;
+        position: absolute;
+        height: 52px;
+        width: 27px;
+        background: url(../img/icons/arrow.png) no-repeat;
+        background-size: contain;
+        top: 24%;
+        opacity: 0.7;
+        cursor: pointer;
+    }
+    .arrow_left {
+        left: 0;
+    }
+    .arrow_right {
+        right: 0;
+        transform: rotate(180deg);
+    }
+    .labs_container {
+        margin-top: 20px;
+        position: relative;
+        padding: 0 37px;
+    }
+    .slide {
+        width: 33%;
+        padding: 0 10px;
+        outline: none;
+    }
+    .img_block {
+        position: relative;
+        width: 100%;
+        &:before {
+            content: "";
+            display: block;
+            padding-top: 100%;
+        }
+    }
+    .img_container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .bottom_section {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+
+    }
+    .slide_link {
+        text-transform: uppercase;
+        font: 1.6em "SupermolotLight";
+        border-bottom: 1px solid #ff028a;
+        color: #ff028a;
+        text-decoration: none;
+        position: relative;
+        margin-bottom: 5px;
+        opacity: 1;
+        &:after {
+            content: '';
+            height: 24px;
+            position: absolute;
+            right: -6px;
+            top: 0;
+            -webkit-transform: translateX(100%);
+            -ms-transform: translateX(100%);
+            transform: translateX(100%);
+            width: 24px;
+            display: block;
+            background: url(../img/icons/link_icon_lab.png) no-repeat;
+            -webkit-background-size: contain;
+            background-size: contain;
+        }
+    }
+    .rating {
+        position: absolute;
+        top: -53px;
+        right: 0;
+        .stars {
+            display: block;
+            width: 120px;
+            height: 14px;
+            background: url(../img/labs/rating.png) no-repeat;
+            background-size: contain;
+            margin-bottom: 4px;
+        }
+        .city {
+            text-transform: uppercase;
+            font: 1.2em "SupermolotRegular";
+            text-align: center;
+            display: block;
+            letter-spacing: 0.4em;
+        }
+    }
+    .title_block {
+        display: inline-block;
+        position: relative;
+        margin-bottom: 30px;
+        &:before,
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            height: 30px;
+            width: 20px;
+        }
+        &:before {
+            left: -27px;
+            bottom: -15px;
+            border-bottom: 2px solid #afafaf;
+            border-left: 2px solid #afafaf;
+        }
+        &:after {
+            top: -15px;
+            right: -17px;
+            border-top: 2px solid #afafaf;
+            border-right: 2px solid #afafaf;
+        }
+        .title_block_top {
+            position: relative;
+            z-index: 2;
+            color: #949494;
+            display: block;
+            text-transform: uppercase;
+            letter-spacing: 0.6em;
+            margin-right: -0.6em;
+            font: 1.6em "SupermolotLight";
+            text-align: center;
+        }
+        .title_block_bottom {
+            position: relative;
+            z-index: 2;
+            color: #949494;
+            display: block;
+            text-transform: uppercase;
+            letter-spacing: 0.8em;
+            margin-right: -0.8em;
+            font: 1.8em "SupermolotRegular";
+            text-align: center;
+        }
+    }
 }
 
 @media screen and (min-width: 1025px) {
-    .links_block a:hover {
+    .links_block a:hover,
+    .crystal_labs .arrow_right:hover,
+    .crystal_labs .arrow_left:hover {
         opacity: 1;
+    }
+    .map .more_crystal a:hover {
+        color: #717171;
     }
 }
